--- a/suite-common/connect-init/package.json
+++ b/suite-common/connect-init/package.json
@@ -19,6 +19,7 @@
         "@suite-common/wallet-core": "workspace:*",
         "@trezor/connect": "workspace:*",
         "@trezor/env-utils": "workspace:^",
+        "@trezor/suite-desktop-api": "workspace:*",
         "@trezor/utils": "workspace:*"
     },
     "devDependencies": {
