--- a/packages/suite-web/package.json
+++ b/packages/suite-web/package.json
@@ -48,6 +48,7 @@
         "cypress": "^13.6.4",
         "cypress-file-upload": "^5.0.8",
         "cypress-image-snapshot": "^4.0.1",
+        "eslint-plugin-cypress": "^4.1.0",
         "rimraf": "^6.0.1",
         "stylelint": "^16.2.1",
         "stylelint-config-standard": "^36.0.0",
