--- a/packages/connect-examples/node/package.json
+++ b/packages/connect-examples/node/package.json
@@ -5,9 +5,10 @@
     "author": "Satoshilabs s.r.o <info@satoshilabs.com>",
     "license": "MIT",
     "scripts": {
-        "start": "node index.js"
+        "start": "tsx  ./src/index.ts"
     },
     "dependencies": {
-        "@trezor/connect": "workspace:*"
+        "@trezor/connect": "workspace:*",
+        "tsx": "^4.19.2"
     }
 }
