--- a/packages/connect-examples/node/tsconfig.json
+++ b/packages/connect-examples/node/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "extends": "../../../tsconfig.base.json",
-    "compilerOptions": { "outDir": "./libDev" },
+    "compilerOptions": { "outDir": "libDev" },
     "include": ["."],
     "references": [{ "path": "../../connect" }]
 }
